<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.jlo.talendcomp</groupId>
	<artifactId>jlo-talendcomp-tabletransfer</artifactId>
	<version>10.3</version>
	<name>Talend Table Transfer Components</name>
	<organization>
		<name>Jan Lolling</name>
	</organization>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>de.cimt.talendcomp</groupId>
				<artifactId>cimt-talendcomp-maven-plugin</artifactId>
				<version>2.1</version>
				<configuration>
					<copyFromSourceBaseDir>${project.basedir}/talend_component</copyFromSourceBaseDir>
					<componentBaseDir>${project.basedir}/talend_component</componentBaseDir>
					<studioUserComponentFolder>${custom_component_folder}</studioUserComponentFolder>
				</configuration>
				<executions>
					<execution>
						<id>tDB2TableTransfer</id>
						<goals>
							<goal>component</goal>
						</goals>
						<configuration>
							<componentName>tDB2TableTransfer</componentName>
						</configuration>
					</execution>
					<execution>
						<id>tEXATableTransfer</id>
						<goals>
							<goal>component</goal>
						</goals>
						<configuration>
							<componentName>tEXATableTransfer</componentName>
						</configuration>
					</execution>
					<execution>
						<id>tMysqlTableTransfer</id>
						<goals>
							<goal>component</goal>
						</goals>
						<configuration>
							<componentName>tMysqlTableTransfer</componentName>
						</configuration>
					</execution>
					<execution>
						<id>tPostgresqlTableTransfer</id>
						<goals>
							<goal>component</goal>
						</goals>
						<configuration>
							<componentName>tPostgresqlTableTransfer</componentName>
						</configuration>
					</execution>
					<execution>
						<id>tOracleTableTransfer</id>
						<goals>
							<goal>component</goal>
						</goals>
						<configuration>
							<componentName>tOracleTableTransfer</componentName>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.17.1</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
</project>